--- a/infrastructure/cloudformation.yaml
+++ b/infrastructure/cloudformation.yaml
@@ -781,6 +781,38 @@ Resources:
       SubnetId: !Ref PublicSubnet
       RouteTableId: !Ref PublicSubnetRouteTable
 
+  BastionRole:
+    Type: AWS::IAM::Role
+    Properties:
+      AssumeRolePolicyDocument:
+        Version: '2012-10-17'
+        Statement:
+        - Effect: Allow
+          Principal:
+            Service:
+            - ec2.amazonaws.com
+          Action:
+          - sts:AssumeRole
+      Path: "/"
+      Policies:
+      - PolicyName: Bastion
+        PolicyDocument:
+          Version: '2012-10-17'
+          Statement:
+          - Effect: Allow
+            Action:
+            - ec2:Describe*
+            - ec2:Get*
+            Resource: "*"
+
+  # Resource that creates the Bastion IAM role
+  BastionInstanceProfile:
+    Type: AWS::IAM::InstanceProfile
+    Properties:
+      Path: "/"
+      Roles:
+      - !Ref BastionRole
+
   # Taken from github.com/aws-quickstart/quickstart-linux-bastion.  We don't
   # call it directly because that quickstart forces 2 bastion hosts and we only
   # want one
@@ -793,6 +825,7 @@ Resources:
           - Ref: AWS::Region
           - "64"
       InstanceType: !Ref BastionInstanceType
+      IamInstanceProfile: !Ref BastionInstanceProfile
       NetworkInterfaces:
         - AssociatePublicIpAddress: true
           DeleteOnTermination: true
@@ -804,12 +837,15 @@ Resources:
             - Ref: BastionSecurityGroup
       Tags:
         - Key: Name
-          Value: bastion-host
+          Value: "bastion-host (Username: ubuntu)"
       KeyName: !Ref KeyName
       UserData:
         Fn::Base64:
           Fn::Sub: |
             #!/bin/bash
+
+            mkdir -p /home/ubuntu/.kube
+            chown -R ubuntu:ubuntu /home/ubuntu/
 
             BASTION_BOOTSTRAP_FILE=bastion_bootstrap.sh
             BASTION_BOOTSTRAP=https://s3.amazonaws.com/aws-quickstart/quickstart-linux-bastion/scripts/bastion_bootstrap.sh
@@ -821,7 +857,9 @@ Resources:
             apt-get -y update && apt-get -y install python-pip
             pip install --upgrade pip &> /dev/null
 
-            ./$BASTION_BOOTSTRAP_FILE --banner https://${QSS3BucketName}.s3.amazonaws.com/${QSS3KeyPrefix}scripts/banner_message.txt --enable true
+            ./$BASTION_BOOTSTRAP_FILE --banner https://${QSS3BucketName}.s3.amazonaws.com/${QSS3KeyPrefix}scripts/banner_message.txt --enable false
+
+            snap install --channel 1.13/stable --classic kubectl
 
   # Open up port 22 for SSH for the bastion host
   BastionSecurityGroup:
