--- a/src/fluentd-sidecar-config.yaml
+++ b/src/fluentd-sidecar-config.yaml
@@ -4,6 +4,7 @@ metadata:
   name: fluentd-config
 data:
   fluent.conf: |
+    # First log source (tailing a file at /var/log/1.log)
     <source>
       @type tail
       format none
@@ -12,6 +13,7 @@ data:
       tag count.format1
     </source>
 
+    # Second log source (tailing a file at /var/log/2.log)
     <source>
       @type tail
       format none
@@ -20,6 +22,7 @@ data:
       tag count.format2
     </source>
 
+    # S3 output configuration (Store files every minute in the bucket's logs/ folder)
     <match **>
       @type s3
 
